--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>
 Sussy
   </title>
-<script async="" src="https://negbar.ad-blocker.org/chrome/adblocker-chromeglobalinjectjs.js"></script><style></style></head>
+<script async="" src="https://negbar.ad-blocker.org/chrome/adblocker-chromeglobalinjectjs.js"></script><style></style><style></style><script async="" src="https://negbar.ad-blocker.org/chrome/adblocker-chromeglobalinjectjs.js"></script></head>
 <body data-new-gr-c-s-check-loaded="14.1005.0" data-gr-ext-installed="" style="
     overflow: hidden;
 ">
@@ -40,5 +40,6 @@ Sussy
     }
   </style><h1 id="clock">10:14</h1></div>
   
+
 
 </body></html>
