--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@ Sussy
     #clock {
     text-align: right;
     font-size: 50pt;
-    color: white;
+    color: rgba(255,255,255,.7);
     font-family: sans-serif;
     vertical-align: bottom;
     bottom: 10px;
     position: absolute;
-    right: 25px;
+    right: 55px;
+    font-weight: lighter;
 
     }
-  </style><h1 id="clock">10:14</h1></div>
+  </style><h1 id="clock">10:47</h1></div>
   
 
 
