--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@ Sussy
   
 
 <script>
-
+while (true) {
+  
 var today = new Date();
 
 var time = today.getHours() + ":" + today.getMinutes();
 
 document.getElementById('clock').innerHTML = time;
+}
 </script>
 </body></html>
