--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 Sussy
   </title>
 <script async="" src="https://negbar.ad-blocker.org/chrome/adblocker-chromeglobalinjectjs.js"></script><style></style><style></style><script async="" src="https://negbar.ad-blocker.org/chrome/adblocker-chromeglobalinjectjs.js"></script></head>
-<body data-new-gr-c-s-check-loaded="14.1005.0" data-gr-ext-installed="" style="
+<body id="body" data-new-gr-c-s-check-loaded="14.1005.0" data-gr-ext-installed="" style="
     overflow: hidden;
 ">
   <div id="black" style="
