--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ var current = 0;
 
 function nextBackground() {
 body.css(
-‘background’,
+  'background',
 backgrounds[current = ++current % backgrounds.length]
 );
 
