--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ backgrounds[current = ++current % backgrounds.length]
 setTimeout(nextBackground, 60000);
 }
 setTimeout(nextBackground, 60000);
-body.css(‘background’, backgrounds[0]);
+body.css('background', backgrounds[0]);
 });
 </script>
 </body></html>
