--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ Sussy
     bottom: 0;
     left: 0;
 "><style>
- 
+ body {
+   background: url('http://wallpapercave.com/wp/nrMj4e5.jpg');
+    }
     #clock {
     text-align: right;
     font-size: 50pt;
