--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@ Sussy
 "><style>
  body {
    background: url('https://www.mariowiki.com/images/7/7d/Coconut_Mall_MKWii.png');
+   background-repeat: no-repeat;
+   width: 100%;
+   height: 100%;
     }
     #clock {
     text-align: right;
