--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ Sussy
    background-repeat: no-repeat;
    width: 100%;
    height: 100%;
+   background-size: cover;
     }
     #clock {
     text-align: right;
