--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@ function timeNow(){
   
 var today = new Date();
 
+var hours = today.getHours();
+  
+var minutes = today.getMinutes();
+  
+if (minutes <= 9 ) {
+  minutes = "0" + minutes;
+}
+  
 var time = today.getHours() + ":" + today.getMinutes();
 
 document.getElementById('clock').innerHTML = time;
