--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ if (minutes <= 9 ) {
   minutes = "0" + minutes;
 }
   
-var time = today.getHours() + ":" + today.getMinutes();
+var time = hours + ":" + minutes;
 
 document.getElementById('clock').innerHTML = time;
 
