--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Sussy
     left: 0;
 "><style>
  body {
-   background: url('https://www.mariowiki.com/images/7/7d/Coconut_Mall_MKWii.png');
+   background: url('https://i.kym-cdn.com/entries/icons/original/000/028/261/Matt_CPU.jpg');
    background-repeat: no-repeat;
    width: 100%;
    height: 100%;
