--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Sussy
     left: 0;
 "><style>
  body {
-   background: url('https://i.kym-cdn.com/entries/icons/original/000/028/261/Matt_CPU.jpg');
+   background: url('http://www.w3.org/2000/svg');
    background-repeat: no-repeat;
    width: 100%;
    height: 100%;
