--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Sussy
     left: 0;
 "><style>
  body {
-   background: url('http://www.w3.org/2000/svg');
+   background: url('https://lh6.ggpht.com/uJoOn409ql7VYa9gAkXWBHXn6WJYfybZj6pmy77StZFAdM74pShiz3ACdJjerYHj-DU');
    background-repeat: no-repeat;
    width: 100%;
    height: 100%;
