--- a/index.html
+++ b/index.html
@@ -12,76 +12,76 @@ Sussy
 ">
 <!-- Hidden Music Files -->
 <audio id="12a">
-    <source src="music/2-12 Midnight (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-12 Midnight (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="1a">
-    <source src="music/1-01 100 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-01 100 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="2a">
-    <source src="music/1-02 200 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-02 200 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="3a">
-    <source src="music/1-03 300 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-03 300 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="4a">
-    <source src="music/1-04 400 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-04 400 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="5a">
-    <source src="music/1-05 500 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-05 500 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="6a">
-    <source src="music/1-06 600 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-06 600 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="7a">
-    <source src="music/1-07 700 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-07 700 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="8a">
-    <source src="music/1-08 800 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-08 800 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="9a">
-    <source src="music/1-09 900 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-09 900 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="10a">
-    <source src="music/1-10 1000 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-10 1000 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="11a">
-    <source src="music/1-11 1100 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-11 1100 a.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="12p">
-    <source src="music/1-12 Noon (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/1-12 Noon (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="1p">
-    <source src="music/2-01 100 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-01 100 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="2p">
-    <source src="music/2-02 200 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-02 200 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="3p">
-    <source src="music/2-03 300 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-03 300 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="4p">
-    <source src="music/2-04 400 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-04 400 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="5p">
-    <source src="music/2-05 500 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-05 500 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="6p">
-    <source src="music/2-06 600 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-06 600 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="7p">
-    <source src="music/2-07 700 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-07 700 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="8p">
-    <source src="music/2-08 800 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-08 800 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="9p">
-    <source src="music/2-09 900 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-09 900 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="10p">
-    <source src="music/2-10 1000 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-10 1000 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
 <audio id="11p">
-    <source src="music/2-11 1100 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
+    <source src="Music/2-11 1100 p.m. (~Sunny Weather~).mp3" type="audio/mpeg">
 </audio>
     
   <div id="black" style="
@@ -132,11 +132,11 @@ function timeNow(){
 var today = new Date();
 
 var hours = today.getHours();
-var musichours = today.getHours();
+var Musichours = today.getHours();
   
 var minutes = today.getMinutes();
 
-if (musichours = 0) {
+if (Musichours = 0) {
     hours = 12;
 }
   
@@ -159,13 +159,13 @@ var time = zerohours + ":" + minutes;
 
 document.getElementById('clock').innerHTML = time;
 
-if (musichours > 12){
+if (Musichours > 12){
     song = hours + "p";
 } else {
     song = hours + "a";
 }
     
-if (musichours > 11){
+if (Musichours > 11){
     prevsong = hours + "p";
 } else {
     prevsong = hours + "a";
