--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ if (today.getHours() > 11){
     prevsong = hours + "a";
 }
 
-    document.getElementById(song).play();
+    document.getElementById(song).pause();
     document.getElementById(prevsong).play();
 }
 
