--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ if (hours <= 9 ) {
 }
 
   
-var time = hours + ":" + minutes;
+var time = zerohours + ":" + minutes;
 
 document.getElementById('clock').innerHTML = time;
 
